--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -26,4 +26,4 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           
           # Run standard linting but treat errors as warnings (exit-zero)
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
